--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,139 @@
 
 }
 
+#skills {
+    margin-top: 6rem;
+  }
+  .bubbleend {
+    position: relative;
+    left: 60%;
+    top: 5%;
+    transform: rotate(50deg);
+  }
+  #skills .bubble {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    left: -15%;
+    border-radius: 50%;
+    background: #343A40; 
+  }
+  #skills h2 {
+    font-weight: 700;
+  }
+  .main-skills {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    transition: all .6s ease;
+    margin-top: 2rem;
+    background: #343A40;
+    margin-bottom: 5rem;
+  }
+  .skill1 {
+    border: 2px solid white;
+    position: relative;
+    z-index: 1;
+  }
+  .skill1::before {
+    transition: 0.5s all ease;
+    position: absolute;
+    top: 100%;
+    left:  0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background: orange;
+    border-radius: 12px;
+  }
+  .skill1:hover::before {
+    opacity: 1;
+    transition: 0.5s all ease;
+    top: 0;
+    z-index: -1;
+  }
+  .skill2 {
+    border: 2px solid white;
+    position: relative;
+    z-index: 1;
+  }
+  .skill2::before {
+    transition: 0.8s all ease;
+    position: absolute;
+    top: 100%;
+    left:  0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background: lightblue;
+    border-radius: 12px;
+  }
+  .skill2:hover::before {
+    opacity: 1;
+    transition: 0.8s all ease;
+    top: 0;
+    z-index: -1;
+  }
+  .skill3 {
+    border: 2px solid white;
+    position: relative;
+    z-index: 1;
+  }
+  .skill3::before {
+    transition: 0.8s all ease;
+    position: absolute;
+    top: 100%;
+    left:  0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background: purple;
+    border-radius: 12px;
+  }
+  .skill3:hover::before {
+    opacity: 1;
+    transition: 0.8s all ease;
+    top: 0;
+    z-index: -1;
+  }
+  .skill4 {
+    border: 2px solid white;
+    position: relative;
+    z-index: 1;
+  }  
+  .skill4::before {
+    transition: 0.8s all ease;
+    position: absolute;
+    top: 100%;
+    left:  0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background: yellow;
+    border-radius: 12px;
+  }
+  .skill4:hover::before {
+    opacity: 1;
+    transition: 0.8s all ease;
+    top: 0;
+    z-index: -1;
+  }
+  .main-skills .card-skills h6 {
+    margin-top: 1rem;
+    font-weight: bold;
+  }
+  .main-skills .card-skills span {
+    font-weight: bold;
+  }
+  
+
 #home{
     padding-top: 4rem;
     
@@ -25,4 +158,9 @@
 
     padding-top: 6rem;
     padding-bottom: 5rem;
+}
+
+#portofolio h2 {
+
+    font-weight: 700;
 }
