--- a/css/style.css
+++ b/css/style.css
@@ -219,12 +219,12 @@
   
 #arrow{
     
-    padding-top: 5rem;
+    padding-top: 10rem;
 }
 
 #about{
 
-    padding-top: 5rem;
+    padding-top: 10rem;
 
 }
 
@@ -244,4 +244,27 @@
   border: none;
   background-image: linear-gradient(to right top, #ffffff, #b9b9b9, #777777, #3b3b3b, #000000);
   border-radius: 12px;
+}
+
+.arrow {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
