--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 #skills {
-    margin-top: 6rem;
+    padding-top: 10rem;
   }
   .bubbleend {
     position: relative;
@@ -14,21 +14,14 @@
     top: 5%;
     transform: rotate(50deg);
   }
-  #skills .bubble {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    left: -15%;
-    border-radius: 50%;
-    background: #343A40; 
-  }
   #skills h2 {
     margin-bottom: 2rem;
+    font-size: 25px;
     font-weight: 700;
   }
   .main-skills {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -210,6 +203,47 @@
   .main-skills .card-skills span {
     font-weight: bold;
   }
+
+.timeline li a{
+
+  text-decoration: none;
+}
+
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+ul.timeline > li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #22c0e8;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+s
+#skill .akademi-isi{
+
+  margin-left: 400px;
+}
   
 
 #home{
