--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ ul.timeline:before {
     left: 29px;
     width: 2px;
     height: 100%;
-    z-index: 400;
+    /* z-index: 400; */
 }
 ul.timeline > li {
     margin: 20px 0;
@@ -237,12 +237,7 @@ ul.timeline > li:before {
     left: 20px;
     width: 20px;
     height: 20px;
-    z-index: 400;
-}
-s
-#skill .akademi-isi{
-
-  margin-left: 400px;
+    /* z-index: 400; */
 }
   
 
