--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@
 .timeline li a {
 
   text-decoration: none;
+  color: #009DF8;
 }
 
 ul.timeline {
@@ -259,7 +260,7 @@ ul.timeline>li:before {
   display: inline-block;
   position: absolute;
   border-radius: 50%;
-  border: 3px solid #22c0e8;
+  border: 3px solid #009DF8;
   left: 20px;
   width: 20px;
   height: 20px;
