--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ html {
 }
 
 #skills {
-  padding-top: 10em;
-  padding-bottom: 10rem;
+  padding-top: 11em;
+  padding-bottom: 11rem;
 }
 
 #skills h2 {
@@ -39,8 +39,8 @@ html {
 }
 
 .main-skills {
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,7 +48,7 @@ html {
   transition: all .6s ease;
   /* margin-top: 2rem; */
   background: #343A40;
-  margin-bottom: 5rem;
+  margin-bottom: 30px;
 }
 
 .skill1 {
@@ -234,6 +234,7 @@ html {
 }
 
 /* toool */
+
 .tool1 {
   /* border: 2px solid white; */
   position: relative;
