--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 html {
   scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
 }
 
 #skills {
@@ -348,46 +350,6 @@ html {
 
 .main-skills .card-skills span {
   font-weight: bold;
-}
-
-.timeline li a {
-
-  text-decoration: none;
-  color: #009DF8;
-}
-
-ul.timeline {
-  list-style-type: none;
-  position: relative;
-}
-
-ul.timeline:before {
-  content: ' ';
-  background: #d4d9df;
-  display: inline-block;
-  position: absolute;
-  left: 29px;
-  width: 2px;
-  height: 100%;
-  z-index: 400;
-}
-
-ul.timeline>li {
-  margin: 20px 0;
-  padding-left: 20px;
-}
-
-ul.timeline>li:before {
-  content: ' ';
-  background: white;
-  display: inline-block;
-  position: absolute;
-  border-radius: 50%;
-  border: 3px solid #009DF8;
-  left: 20px;
-  width: 20px;
-  height: 20px;
-  z-index: 400;
 }
 
 #home {
