--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* Ijin Dulu kawan kalo mau copas */
-
 html {
   scroll-behavior: smooth;
   padding: 0;
@@ -229,6 +228,31 @@ html {
 }
 
 .skill7:hover::before {
+  opacity: 1;
+  transition: 0.8s all ease;
+  bottom: 0;
+  z-index: -1;
+}
+.skill8 {
+  /* border: 2px solid white; */
+  position: relative;
+  z-index: 1;
+}
+
+.skill8::before {
+  transition: 0.8s all ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 100%;
+  opacity: 0;
+  content: '';
+  background: #EE4323;
+  border-radius: 12px;
+}
+
+.skill8:hover::before {
   opacity: 1;
   transition: 0.8s all ease;
   bottom: 0;
